--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "boxen": "^5.0.1",
     "chalk": "^4.1.1",
     "compression": "^1.7.4",
+    "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
@@ -19,6 +20,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/boxen": "^3.0.1",
     "@types/chalk": "^2.2.0",
+    "@types/connect-mongo": "^3.1.3",
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
@@ -35,6 +38,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.0.2",
     "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "nodemon": "^2.0.7",
     "prisma": "2.22.1",
     "ts-node-dev": "^1.1.6",
