--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "skipLibCheck": true,
     "moduleResolution": "node",
     "rootDir": "src",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
   },
   "include": [
     "./src/**/*"
