--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
+
+# #################################
+# Rename me to .env
+# #################################
+
+
 MONGODB_URI="mongodb+srv://<user>:<password>@<host>:<port>" # Example URI for Mongodb
 SESSION_SECRET="a_very_secret_key" # Obviously don't share
